cc_library(
    name = "recorder",
    srcs = ["recorder.c"],
    hdrs = ["recorder.h"],
    deps = [
        "//src/formats/zet/c:zet_format",
        "//src/bus/c:bus",
    ],
    linkopts = ["-lpthread"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "player",
    srcs = ["player.c"],
    hdrs = ["player.h"],
    deps = [
        "//src/formats/zet/c:zet_format",
        "//src/bus/c:bus",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "timeskip",
    srcs = ["main.cpp"],
    deps = [
        ":recorder",
        ":player",
        "//third_party/cli11",
    ],
    visibility = ["//visibility:public"],
)
