load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "backend_interface",
    hdrs = ["backend_interface.h"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "recorder_controller",
    srcs = ["recorder_controller.cpp"],
    hdrs = ["recorder_controller.h"],
    deps = [
        ":backend_interface",
        "//src/cli/timeskip/ui:terminal",
        "//src/cli/timeskip/ui:formatting",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "player_controller",
    srcs = ["player_controller.cpp"],
    hdrs = ["player_controller.h"],
    deps = [
        ":backend_interface",
        "//src/cli/timeskip/ui:terminal",
        "//src/cli/timeskip/ui:formatting",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "timeskip",
    srcs = ["main.cpp"],
    deps = [
        ":backend_interface",
        ":recorder_controller",
        ":player_controller",
        "//src/cli/timeskip/zet_backend:recorder_adapter",
        "//src/cli/timeskip/zet_backend:player_adapter",
        "//src/cli/timeskip/mcap_backend:recorder_adapter",
        "//src/cli/timeskip/mcap_backend:player_adapter",
        "//third_party/cli11",
    ],
    visibility = ["//visibility:public"],
)